Accidently Changed Desktop icon for everyone. Here is the original back
Changed the desktop logo to the Internet Explorer. Here is the original back

--- a/desktop.ini
+++ b/desktop.ini
@@ -2,6 +2,6 @@
 Mode=
 Vid=
 FolderType=Generic
-Logo=C:\Users\Logan Cover\Downloads\a (1).jpg
+Logo=
 [.ShellClassInfo]
-IconResource=C:\WINDOWS\System32\SHELL32.dll,242
+IconResource=C:\WINDOWS\System32\SHELL32.dll,4
